# leopardi-ocr

./: .gitignore  .gitmodules  Makefile  README.md  pyproject.toml
benchmark/: README.md
configs/: README.md
data_pipeline/: README.md  competitive-lessons.md  references.md  stack.md
docs/: architecture.md  benchmarks.md  dataset.md  experimentation.md  finetune.md  inference.md  optimization.md  pretrain.md  references.md  roadmap.md  run-on-rtx5090.md
evaluation/: README.md
experiments/: README.md
finetune/: README.md  adapter-policy.md  artifacts.md  data.md  recipe.md  references.md  reward-design.md  rtx5090-runbook.md
inference/: README.md  artifacts.md  document-assembly.md  references.md  routing.md  rtx5090-runbook.md  runtime-compat.md  structured-decoding.md  validators.md
model/: README.md  artifacts.md  family.md  interfaces.md  presets.md  references.md  rtx5090-runbook.md
ops/: README.md  git-surface.md  logging.md  persistence.md  recovery-and-control.md  references.md  run-contract.md
optimization/: README.md  artifacts.md  calibration.md  recipe.md  references.md  rtx5090-runbook.md  runtime-compat.md  variants.md
pretraining/: README.md  artifacts.md  objectives.md  recipe.md  rtx5090-runbook.md  stages.md
scripts/: bootstrap_env.sh  bootstrap_rtx5090.sh  create_experiment.py  generate_european_multilingual_samples.py  generate_synthdog_european.py  run_benchmark.sh  smoke_chain_cpu.sh  smoke_cpu.sh
tests/: test_data_pipeline_builder.py  test_data_pipeline_scaffold.py  test_evaluation_scaffold.py  test_finetune_scaffold.py  (+7 more)
(+232 files in other folders)
